--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,9 @@
-@import url("reset.css");
+@import url(reset.css);
 @import url("https://fonts.googleapis.com/css?family=Lora:regular,700&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Roboto:700&display=swap");
-@import url("common.css");
-@import url("header.css");
-@import url("footer.css");
-@import url("homepage.css");
-@import url("article.css");
+@import url(variables.css);
+@import url(common.css);
+@import url(header.css);
+@import url(footer.css);
+@import url(homepage.css);
+@import url(article.css);
